<resources>
    <string name="app_name" translatable="false">Pixel Launcher Enhanced</string>
    <string name="app_name_shortened" translatable="false">PLEnhanced</string>
    <string name="app_motto">Unleash the full potential of your launcher</string>
    <string name="icon">Icon</string>
    <string name="more">More</string>
    <string name="exit">Exit</string>
    <string name="learn_more">Learn more</string>
    <string name="attention">Attention</string>
    <string name="opt_default">(Default)</string>
    <string name="opt_selected1" translatable="false">%s</string>
    <string name="opt_selected2" translatable="false">%1$s%2$s</string>
    <string name="opt_selected3" translatable="false">%1$s%2$s %3$s</string>
    <string name="btn_pick_image">Pick image</string>
    <string name="understood">Understood</string>
    <string name="settings_title">Settings</string>
    <string name="search_hint">Search…</string>
    <string name="root_connection_failed_title">Root connection failed</string>
    <string name="root_connection_failed_desc">Unable to connect to root service. Please grant root access and try again.</string>
    <string name="lsposed_warn">Enable this module from LSPosed and force close launcher.</string>
    <string name="lsposed_bootloop_warn">One of the features you enabled is not compatible with this version of launcher. Please disable it and force close launcher.</string>
    <string name="xposed_module_disabled_title">Module not activated</string>
    <string name="xposed_module_disabled_desc">System service not running</string>
    <string name="xposed_module_bootlooped_title">Bootloop detected</string>
    <string name="xposed_module_bootlooped_desc">Module has been disabled</string>
    <string name="force_close_launcher">Force close launcher</string>
    <string name="version_codes" translatable="false">%s (#%d)</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="github">GitHub</string>
    <string name="dev_name" translatable="false">DrDisagree</string>
    <string name="dev_bio">Learner | Developer | Designer</string>
    <string name="buymeacoffee_title">Enjoying this app?</string>
    <string name="buymeacoffee_desc">Consider buying me a coffee</string>
    <string name="fragment_icons_title">Icons</string>
    <string name="fragment_icons_desc">Set icon size and more</string>
    <string name="fragment_home_screen_title">Home screen</string>
    <string name="fragment_home_screen_desc">Set Google now panel and more</string>
    <string name="fragment_app_drawer_title">App drawer</string>
    <string name="fragment_app_drawer_desc">Customize your app drawer</string>
    <string name="fragment_recents_title">Recents</string>
    <string name="fragment_recents_desc">Revamp the overview screen</string>
    <string name="fragment_miscellaneous_title">Miscellaneous</string>
    <string name="fragment_miscellaneous_desc">Other useful options</string>
    <string name="fragment_gestures_title">Gestures</string>
    <string name="fragment_gestures_desc">Double tap and navigation</string>
    <string name="fragment_backup_title">Backup &amp; restore</string>
    <string name="fragment_backup_desc">Home layout, app drawer and settings</string>
    <string name="fragment_advanced_title">Advanced</string>
    <string name="fragment_advanced_desc">Entry points, fixes and developer options</string>
    <string name="section_home_gestures_title">Home screen</string>
    <string name="section_navigation_title">Navigation</string>
    <string name="section_layout_title">Layout</string>
    <string name="section_statusbar_title">Status bar</string>
    <string name="section_page_indicator_title">Page indicator</string>
    <string name="section_drawer_mode_title">Drawer mode</string>
    <string name="section_appearance_title">Appearance</string>
    <string name="section_themed_icons_title">Themed icons</string>
    <string name="section_app_menu_title">App menu</string>
    <string name="section_freeform_title">Freeform</string>
    <string name="section_entry_points_title">Entry points</string>
    <string name="section_home_layout_backup_title">Home screen layout</string>
    <string name="section_drawer_layout_backup_title">App drawer layout</string>
    <string name="section_module_settings_backup_title">Settings</string>
    <string name="backup_action">Back up</string>
    <string name="restore_action">Restore</string>
    <string name="backup_card_home_desc">Icons, folders, widgets and dock</string>
    <string name="backup_card_drawer_desc">Tabs and hidden apps</string>
    <string name="backup_card_settings_desc">Every option in this app</string>
    <string name="dashboard_search_hint">Search settings</string>
    <string name="dashboard_home_screen_desc">Grid, dock, page indicator and more</string>
    <string name="dashboard_app_drawer_desc">Tabs, layout and hidden apps</string>
    <string name="dashboard_icons_desc">Icon packs, size and themed icons</string>
    <string name="dashboard_recents_desc">Overview actions and look</string>
    <string name="dashboard_status_active">Module active</string>
    <string name="dashboard_status_inactive">Module inactive</string>
    <string name="dashboard_launcher_missing">No supported launcher</string>
    <string name="dashboard_launcher_version">Version %1$s</string>
    <string name="restart_launcher_action">Restart launcher</string>
    <string name="search_no_results">No settings match \"%1$s\"</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_about_desc">About this application</string>
    <string name="fragment_hidden_apps_title">Hide apps</string>
    <string name="force_themed_icons_title">Force themed icons</string>
    <string name="app_drawer_themed_icons_title">Themed icons</string>
    <string name="app_drawer_themed_icons_desc">Enable themed icons on app drawer</string>
    <string name="gesture_double_tap_title">Double tap</string>
    <string name="gesture_double_tap_desc">Double tap on empty space</string>
    <string name="gesture_pinch_in_title">Pinch in</string>
    <string name="gesture_pinch_in_desc">Pinch two fingers together</string>
    <string name="gesture_pinch_out_title">Pinch out</string>
    <string name="gesture_pinch_out_desc">Spread two fingers apart</string>
    <string name="allow_wallpaper_zooming">Wallpaper zooming</string>
    <string name="allow_wallpaper_zooming_summary">Zoom in or out the wallpaper when using drawer or recent apps</string>
    <string name="desktop_icon_labels_title">Icon labels on desktop</string>
    <string name="home_themed_icons_title">Themed icons</string>
    <string name="home_themed_icons_desc">Same as Themed icons in Wallpaper &amp; style</string>
    <string name="hide_launcher_statusbar_title">Hide statusbar</string>
    <string name="hide_launcher_statusbar_desc">Expand quick settings panel once if status bar is not hidden</string>
    <string name="hide_launcher_top_shadow_title">Hide top shadow</string>
    <string name="hide_launcher_top_shadow_desc">Remove top shadow from home screen</string>
    <string name="dark_launcher_statusbar_title">Force dark statusbar</string>
    <string name="dark_launcher_page_indicator_title">Force dark page indicator</string>
    <string name="hide_launcher_page_indicator_title">Hide page indicator</string>
    <string name="quick_launch_title">Quick Launch</string>
    <string name="quick_launch_desc">Launch apps directly from search by pressing enter</string>
    <string name="app_drawer_icon_labels_title">Icon labels in app drawer</string>
    <string name="hide_at_a_glance_title">Hide At A Glance</string>
    <string name="hide_at_a_glance_desc">Hide at a glance from home screen</string>
    <string name="hide_desktop_search_bar_title">Hide desktop search bar</string>
    <string name="hide_desktop_search_bar_desc">Hide search bar from desktop dock</string>
    <string name="dock_spacing_title">Dock spacing</string>
    <string name="section_dock_title">Dock</string>
    <string name="disable_dock_title">Disable dock</string>
    <string name="disable_dock_desc">Hide the dock and its search bar. Dock icons move to the home screen</string>
    <string name="app_drawer_background_opacity_title">App drawer background opacity</string>
    <string name="restart_launcher_title">Restart</string>
    <string name="restart_launcher_desc">Restart the launcher manually to apply any pending settings</string>
    <string name="section_settings_backup_title">Settings backup</string>
    <string name="backup_home_layout_title">Back up home screen layout</string>
    <string name="backup_home_layout_desc">Save the launcher\'s icons, folders, widgets and dock to a file. Doesn\'t include this app\'s settings</string>
    <string name="restore_home_layout_title">Restore home screen layout</string>
    <string name="restore_home_layout_desc">Replace the launcher\'s current icons, folders, widgets and dock with a layout backup</string>
    <string name="backup_settings_title">Back up settings</string>
    <string name="backup_settings_desc">Save this app\'s settings to a file. Doesn\'t include home screen or app drawer layouts</string>
    <string name="restore_settings_title">Restore settings</string>
    <string name="restore_settings_desc">Replace this app\'s current settings with a settings backup</string>
    <string name="developer_options_title">Developer options</string>
    <string name="developer_options_desc">Enable hidden developer options</string>
    <string name="entry_in_launcher_settings">Show entry in launcher settings</string>
    <string name="entry_in_homescreen_popup">Show entry in homescreen popup</string>
    <string name="hide_gesture_pill_title">Hide gesture indicator</string>
    <string name="hide_gesture_pill_desc">May not work on older android versions</string>
    <string name="hide_navigation_space_title">Hide navigation bar space</string>
    <string name="hide_navigation_space_desc">Remove empty space around the navigation bar</string>
    <string name="lock_layout_title">Lock layout</string>
    <string name="lock_layout_desc_on">Icons and widgets can\'t be added, removed and moved on the homescreen</string>
    <string name="lock_layout_desc_off">Icons and widgets can be added, removed and moved on the homescreen</string>
    <string name="free_widget_resize_title">Free widget resizing</string>
    <string name="free_widget_resize_desc">Resize any widget to any size, ignoring the limits set by its app</string>
    <string name="drawer_search_title">App search bar</string>
    <string name="drawer_search_desc">Search bar on top of the app drawer</string>
    <string name="homescreen_columns_title">Homescreen columns</string>
    <string name="homescreen_rows_title">Homescreen rows</string>
    <string name="app_drawer_columns_title">App drawer columns</string>
    <string name="app_drawer_row_height_multiplier_title">Row height multiplier</string>
    <string name="hide_apps_title">Hide apps from app drawer</string>
    <string name="search_hidden_apps_title">Allow searching for hidden apps</string>
    <string name="toggle_hidden_app_visibility_title">Toggle hidden app visibility from homescreen popup</string>
    <string name="section_general_title">General</string>
    <string name="section_interface_title">Interface</string>
    <string name="section_search_bar_title">Search bar</string>
    <string name="section_quickspace_title">Quickspace</string>
    <string name="section_hide_apps_title">Hide apps</string>
    <string name="search_bar_opacity_title">Search bar opacity</string>
    <string name="prevent_wallpaper_dimming_restart_title">Prevent wallpaper dimming caused restart</string>
    <string name="prevent_wallpaper_dimming_restart_summary">May need manual restart for launcher to pick up Live Wallpaper color update</string>
</resources>