<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory
        android:key="xposed_misc_general"
        android:title="@string/section_general_title"
        app:iconSpaceReserved="false">

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:defaultValue="false"
            android:key="xposed_hidegesturepill"
            android:title="@string/hide_gesture_pill_title"
            android:summary="@string/hide_gesture_pill_desc"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:defaultValue="false"
            android:key="xposed_hidenavigationspace"
            android:summary="@string/hide_navigation_space_desc"
            android:title="@string/hide_navigation_space_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:defaultValue="false"
            android:key="xposed_preventwallpaperdimmingrestart"
            android:summary="@string/prevent_wallpaper_dimming_restart_summary"
            android:title="@string/prevent_wallpaper_dimming_restart_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:defaultValue="true"
            android:key="xposed_entryinlaunchersettings"
            android:title="@string/entry_in_launcher_settings"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:defaultValue="false"
            android:key="xposed_entryinoptionspopup"
            android:title="@string/entry_in_homescreen_popup"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.SwitchPreference
            android:key="xposed_developeroptions"
            android:summary="@string/developer_options_desc"
            android:title="@string/developer_options_title"
            app:iconSpaceReserved="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
            android:key="xposed_restartlauncher"
            android:summary="@string/restart_launcher_desc"
            android:title="@string/restart_launcher_title"
            app:iconSpaceReserved="false"
            app:showArrow="false" />

    </com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory>

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory
        android:key="xposed_misc_home_layout_backup"
        android:title="@string/section_home_layout_backup_title"
        app:iconSpaceReserved="false">

        <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
            android:key="xposed_backuphomelayout"
            android:summary="@string/backup_home_layout_desc"
            android:title="@string/backup_home_layout_title"
            app:iconSpaceReserved="false"
            app:showArrow="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
            android:key="xposed_restorehomelayout"
            android:summary="@string/restore_home_layout_desc"
            android:title="@string/restore_home_layout_title"
            app:iconSpaceReserved="false"
            app:showArrow="false" />

    </com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory>

    <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory
        android:key="xposed_misc_settings_backup"
        android:title="@string/section_settings_backup_title"
        app:iconSpaceReserved="false">

        <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
            android:key="xposed_backupsettings"
            android:summary="@string/backup_settings_desc"
            android:title="@string/backup_settings_title"
            app:iconSpaceReserved="false"
            app:showArrow="false" />

        <com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceMenu
            android:key="xposed_restoresettings"
            android:summary="@string/restore_settings_desc"
            android:title="@string/restore_settings_title"
            app:iconSpaceReserved="false"
            app:showArrow="false" />

    </com.drdisagree.pixellauncherenhanced.ui.preferences.PreferenceCategory>

</PreferenceScreen>
